Fixed InfoWindow content rendering issue on Firefox

--- a/src/webapp/stylesheets/index.styl
+++ b/src/webapp/stylesheets/index.styl
@@ -37,3 +37,6 @@ html, body, #map-container
         position: fixed
         top: 50%
         left: 50%
+
+.nobr
+    white-space: nowrap
